why choose btn txt alignment fixed

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1546,6 +1546,7 @@ main>.section.previous-studies-tab.tabs-container {
           height: 40px;
           display: flex;
           align-items: center;
+          justify-content: center;
         }
       }
     }
